[package]
name = "visivi"
version = "0.1.0"
authors = ["skuroedov <me@sergeykuroedov.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "visivi"
path = "src/main.rs"

[lib]
name = "visivi"
path = "src/lib/lib.rs"
