[package]
name = "visivi"
version = "0.1.0"
authors = ["skuroedov <me@sergeykuroedov.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
features = ["v2_66"]

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gtk4"

[[bin]]
name = "visivi"
path = "src/main.rs"

[lib]
name = "visivi"
path = "src/lib/mod.rs"
